--- a/style.css
+++ b/style.css
@@ -33,10 +33,9 @@ body, input, button {
 }
 
 body { 
-  max-width: 100%;
-  margin: 0 auto;
-  border: 1px solid red;
-  
+  max-width: 112.0rem;
+  margin: 10.6rem auto 9.6rem ;
+
 
   background-color: var(--bg-body-color);
 }
@@ -46,15 +45,24 @@ header {
   justify-content: space-between;
   align-items: center;
 
-  width: 112.0rem;
   height: 4.8rem;
-  
-  border: 1px solid red;
 }
 
 header .search {
   display: flex;
   gap: .8rem;
+}
+
+header .search label{
+ position: absolute;
+  height: 1px;
+  width: 1px;
+  padding: 0;
+  margin: -1;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width:0 ;
 }
 
 header .search input {
@@ -71,13 +79,51 @@ header .search input {
   color: var(--text-color);
 }
 
+header .search input:focus {
+  outline: 1px solid var(--text-color-button-click);
+}
+
 header .search button {
+  display: flex;
+  align-items: center;
+  gap: .8rem;
+  padding: 0 2.7rem;
+
+
   width: 17.0rem;
   height: 4.8rem;
   border-radius: .5rem;
+  border: none;
 
   background-color: var(--bg-button-color);
   text-transform: uppercase;
   color: var(--text-color);
-  font-weight: bold;
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  
+  transition: all .1s;
+}
+
+header .search button:hover{
+  cursor: pointer;
+
+  transform: scale(1.03);
+}
+
+header .search button:active{
+  background-color: var(--bg-button-color-click);
+  color: var(--text-color-button-click);
+}
+
+header .search button:active svg path{
+  fill: var(--text-color-button-click);
+}
+
+
+table thead{
+  position: absolute;
+  margin-top: 9.6rem;
+  color: var(--text-color);
+  border: 2px solid red;
 }
