--- a/style.css
+++ b/style.css
@@ -123,6 +123,8 @@ header .search button:active svg path{
 
 
 table{
+  border-collapse: collapse;
+
   width: 100%;
   margin-top: 8.7rem;
   color: var(--text-color);
@@ -135,15 +137,12 @@ table{
 
 table thead {
   height: 6.4rem;
-  border-left: none;
-
-  
-  align-items: flex-start;
- 
-
-
-
   background-color: var(--bg-header-table);
+}
+
+table thead th {
+  text-align: left;
+  padding-left: 4rem;
 }
 
 table thead th:nth-child(1) {
@@ -196,6 +195,14 @@ table tr td .remove:hover {
   color: #f75a678b;
 
   transform: scale(0.97);
+}
+
+table th:first-child {
+  border-top-left-radius: .7rem;
+}
+
+table th:last-child {
+  border-top-right-radius: .7rem;
 }
 
 /* para pegar todas as coluna pares e aplicar isso */
